--- a/public/index.html
+++ b/public/index.html
@@ -4,16 +4,17 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title> Tolkien Fan Club </title>
+    <title> Gary Feng's Portfolio </title>
     <link href="/index.css" rel="stylesheet">
 </head>
 
 <body>
     <article>
-        <div><h1>Tolkien Fan Club</h1><p><b>I like Tolkien</b>. Read my <a href="/majesty">first post here</a></p><blockquote>All that is gold does not glitter</blockquote><h2>Reasons I like Tolkien</h2><ul><li>You can spend years studying the legendarium and still not understand its depths</li><li>It can be enjoyed by children and adults alike</li><li>Disney <i>didn't ruin it</i></li><li>It created an entirely new genre of fantasy</li></ul><h2>My favorite characters (in order)</h2><ol><li>Gandalf</li><li>Bilbo</li><li>Sam</li><li>Glorfindel</li><li>Galadriel</li><li>Elrond</li><li>Thorin</li><li>Sauron</li><li>Aragorn</li></ol><p>Here's what <code>elflang</code> looks like (the perfect coding language):</p><pre><code>func main(){
-    fmt.Println("Hello, World!")
-}
-</code></pre></div>
+        <div><h1>Gary Feng's Portfolio</h1><p>I have a B.S. in Statistics, worked in healthcare, and learning backend development. This website is a fork/clone of my static site generator project.
+Do not expect fancy UX design here. The base coloring of the website is inspired by GMK Olivia.</p><p><a href="https://github.com/Chichigami">Github</a>
+<a href="https://www.linkedin.com/in/gary-feng-847156241/">LinkedIn</a>
+<a href="https://www.boot.dev/u/chichigami">Bootdev</a></p><h2>Projects I have done</h2><ul><li>This</li><li>Pokedex</li><li>RSS aggregator</li><li>Wordle in Scala</li><li>Maze creator and solver</li><li>Asteroids in Pygame</li></ul><h2>My notes</h2><p>I have done quite a bit of notes and I'll store them here
+SQL [/notes/SQL]</p></div>
     </article>
 </body>
 
