added nav bar, footer, changed content

--- a/public/index.html
+++ b/public/index.html
@@ -4,18 +4,27 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title> Gary Feng's Portfolio </title>
+    <title> About Me </title>
     <link href="/index.css" rel="stylesheet">
 </head>
 
 <body>
+    <nav class="navbar">
+        <a href="/" class="logo">Gary Feng</a>
+        <ul class="nav-tabs">
+            <li><a href="/projects">Projects</a></li>
+            <li><a href="/notes/">Notes</a></li>
+        </ul>
+    </nav>
+
     <article>
-        <div><h1>Gary Feng's Portfolio</h1><p>I have a B.S. in Statistics, worked in healthcare, and learning backend development. This website is a fork/clone of my static site generator project.
-Do not expect fancy UX design here. The base coloring of the website is inspired by GMK Olivia. I also know that the markdown parser is "buggy" and will probably fix it for the code block. I really like Discord's codeblock color schemes.</p><p>Email: <a href="mailto:g.feng.work@gmail.com">g.feng.work@gmail.com</a>
-<a href="https://github.com/Chichigami">Github</a>
-<a href="https://www.linkedin.com/in/gary-feng-847156241/">LinkedIn</a>
-<a href="https://www.boot.dev/u/chichigami">Bootdev</a></p><h2>Projects I have done</h2><ul><li><a href="https://github.com/Chichigami/chichigami.github.io">This Website</a></li><li><a href="https://github.com/Chichigami/pokedex">Pokedex</a></li><li>  - This is a REPL that uses <a href="https://pokeapi.co/">PokeAPI</a>. You can find routes, catch and inspect pokemons. There is simple caching to ensure optimal speeds as well as not accidentally DOSing the server.</li><li><a href="https://github.com/Chichigami/blog-aggregator">RSS aggregator</a></li><li>  - WIP</li><li><a href="https://github.com/Chichigami/scala-wordle">Wordle in Scala</a></li><li>  - I learned Scala back in University and I wanted to relearn it. There has been huge changes to the language since I last used it, so I made a simple wordle REPL. I never got in on the wordle craze, so this is my entry to the Wordle craze. Because there isn't a word bank now due to NYT acquisition, I didn't implement a word checker.</li><li>  - Will add a generic dictionary and DB in the future.</li><li><a href="https://github.com/Chichigami/maze-solver">Maze creator and solver</a></li><li>  - Using Python's tktinker, this is a maze creator as well as solver.</li><li><a href="https://github.com/Chichigami/asteroids">Asteroids in Pygame</a></li><li>  - Asteroids made with pygame library.</li></ul><h2>My <a href="/notes/">notes</a></h2><p>I use Joplin to take my notes. I use a 2 part system where I jot down notes/code snippets and then I revise to organize, and condense the information. I have not revised most of these notes or even finished the notes.</p><ul><li><a href="/notes/SQL">SQL</a></li><li><a href="/notes/Python">Python</a></li><li><a href="/notes/Golang">Golang</a></li><li><a href="/notes/JavaScript">JS</a></li><li><a href="/notes/C">C</a></li><li><a href="/notes/Scala">Scala</a></li><li><a href="/notes/Kubernetes">K8s</a></li><li><a href="notes/Docker/">Docker</a></li><li><a href="notes/DS">Data Structs</a></li><li><a href="/notes/Git">Git</a></li><li><a href="notes/Algo">Algo</a></li><li><a href="/notes/FP">Functional Programming</a></li></ul><h2>Games that I play</h2><p>Like most people that get into programming; I enjoy playing games. These are some games I've played along with the rankings I've achieved.</p><ul><li>League of Legends (Diamond)</li><li>Valorant (Platinum)</li><li>Teamfight Tactics (Diamond)</li><li>Apex Legends (Diamond)</li><li>Eternal Return (Diamond)</li><li>Path of Exile</li></ul></div>
+        <div><h1>About Me</h1><p>I have a B.S. in Statistics from University at Buffalo SUNY (not SUNY Buffalo). I was trained as a opthamologist (the study of diseases of the eye) technician, and have been learning backend development. This website is a fork/clone of my static site generator project. Do not expect fancy UX design here. The base coloring of the website is inspired by GMK Olivia. I also know that the markdown parser is "buggy" and will probably fix it for the code block. I really like Discord's codeblock color schemes.</p><p>Email: <a href="mailto:g.feng.work@gmail.com">g.feng.work@gmail.com</a></p><p><a href="https://github.com/Chichigami">Github</a></p><p><a href="https://www.linkedin.com/in/gary-feng-847156241/">LinkedIn</a></p><p><a href="https://www.boot.dev/u/chichigami">Bootdev</a></p><h2>Games that I play</h2><p>Like most people that get into programming; I enjoy playing games. These are some games I've played along with the rankings I've achieved.</p><ul><li>League of Legends (Diamond)</li><li>Valorant (Platinum)</li><li>Teamfight Tactics (Diamond)</li><li>Apex Legends (Diamond)</li><li>Eternal Return (Diamond)</li><li>Path of Exile</li></ul></div>
     </article>
+
+    <footer>
+        <p>© 2024 Gary Feng. All rights reserved.</p>
+    </footer>
+
 </body>
 
 </html>
