--- a/public/notes/Git/index.html
+++ b/public/notes/Git/index.html
@@ -9,6 +9,14 @@
 </head>
 
 <body>
+    <nav class="navbar">
+        <a href="/" class="logo">Gary Feng</a>
+        <ul class="nav-tabs">
+            <li><a href="/projects">Projects</a></li>
+            <li><a href="/notes/">Notes</a></li>
+        </ul>
+    </nav>
+
     <article>
         <div><h1>Git</h1><p>Pretty unorganized because it's mostly just terminal commands.</p><p><code></code><code>zsh
 git status</code></p><p>git add filepath</p><p>git commit -m "message"</p><p>git commit --amend -m "change last commit message"</p><p>#see history
@@ -80,6 +88,11 @@ v1.2.3
 2 is for minor changes
 3 is for bug fixes</p></div>
     </article>
+
+    <footer>
+        <p>© 2024 Gary Feng. All rights reserved.</p>
+    </footer>
+
 </body>
 
 </html>
