--- a/public/notes/Golang/index.html
+++ b/public/notes/Golang/index.html
@@ -9,6 +9,14 @@
 </head>
 
 <body>
+    <nav class="navbar">
+        <a href="/" class="logo">Gary Feng</a>
+        <ul class="nav-tabs">
+            <li><a href="/projects">Projects</a></li>
+            <li><a href="/notes/">Notes</a></li>
+        </ul>
+    </nav>
+
     <article>
         <div><h1>Git</h1><p>It's mostly complete, but needs to be touched upon.</p><h2>Types</h2><p><code></code><code>
 bool</code></p><p>string</p><p>int  int8  int16  int32  int64
@@ -230,6 +238,11 @@ CREATE DATABASE gator;
 SELECT version();
 <code></code><code></code></p></div>
     </article>
+
+    <footer>
+        <p>© 2024 Gary Feng. All rights reserved.</p>
+    </footer>
+
 </body>
 
 </html>
