--- a/public/notes/JavaScript/index.html
+++ b/public/notes/JavaScript/index.html
@@ -9,6 +9,14 @@
 </head>
 
 <body>
+    <nav class="navbar">
+        <a href="/" class="logo">Gary Feng</a>
+        <ul class="nav-tabs">
+            <li><a href="/projects">Projects</a></li>
+            <li><a href="/notes/">Notes</a></li>
+        </ul>
+    </nav>
+
     <article>
         <div><h1>JavaScript</h1><p>A popular language that I don't really care about.</p><h2>Basics</h2><p>Typing Convention: camelCase</p><p>Printing: <code>console.log('string');</code>
 To print/interpolate a variable use <code>'${variable}'</code> NOTICE THE \<code></code></p><p>Commenting: <code>//text</code> OR multiple lines <code>/</code><i> text </i>/<code>
@@ -114,6 +122,11 @@ Originally it used to be on the browser only.
 Now Node.js, Deno.js, Bun can all run js.
 Node Version Manager allows you to have different versions of Node. Easy to manage based on projects that require different version/update version.</p></div>
     </article>
+
+    <footer>
+        <p>© 2024 Gary Feng. All rights reserved.</p>
+    </footer>
+
 </body>
 
 </html>
