--- a/public/notes/Python/index.html
+++ b/public/notes/Python/index.html
@@ -11,6 +11,14 @@ except Exception as e:
 </head>
 
 <body>
+    <nav class="navbar">
+        <a href="/" class="logo">Gary Feng</a>
+        <ul class="nav-tabs">
+            <li><a href="/projects">Projects</a></li>
+            <li><a href="/notes/">Notes</a></li>
+        </ul>
+    </nav>
+
     <article>
         <div><h1>Python Basics</h1><h2>Printing</h2><p><code></code><code>py
 print("Hello World")
@@ -69,6 +77,11 @@ except Exception as e:
     print(e)</p><p>raise Exception("can't divide by 0")
 <code></code><code></code></p></div>
     </article>
+
+    <footer>
+        <p>© 2024 Gary Feng. All rights reserved.</p>
+    </footer>
+
 </body>
 
 </html>
