--- a/public/notes/SQL/index.html
+++ b/public/notes/SQL/index.html
@@ -9,6 +9,14 @@
 </head>
 
 <body>
+    <nav class="navbar">
+        <a href="/" class="logo">Gary Feng</a>
+        <ul class="nav-tabs">
+            <li><a href="/projects">Projects</a></li>
+            <li><a href="/notes/">Notes</a></li>
+        </ul>
+    </nav>
+
     <article>
         <div><h1>SQL Basics</h1><h2>Create table</h2><pre><code>CREATE TABLE table_name (
 	variable_name TYPE CONSTRAINT
@@ -114,6 +122,11 @@ JOIN table2 ON table1.column = table2.column
 common naming scheme: column_name_idx</p><ul><li>Add index to columns where there will be freq look up. Because each index = 1 binary tree. Every data insert will make a new binary tree PER INDEX resulting in slower write speeds.</li></ul><h2>Multiple column index</h2><p><code>CREATE INDEX col1_col2_etc_idx ON table(col1, col2, etc);</code></p><ul><li>If you query on first col, it'll be almost the same performance vs single index'ed columns, the more you add the more degraded the performance. Do this for only freq look up combinations.</li></ul><h1>SQL INJECTION</h1><p>- Use modern librarys to sanitize data otherwise you might pass raw strings that can ruin your db/give records to hackers.
   ie: user = asd); DROP TABLE kekw</p></div>
     </article>
+
+    <footer>
+        <p>© 2024 Gary Feng. All rights reserved.</p>
+    </footer>
+
 </body>
 
 </html>
