--- a/public/notes/Scala/index.html
+++ b/public/notes/Scala/index.html
@@ -9,6 +9,14 @@
 </head>
 
 <body>
+    <nav class="navbar">
+        <a href="/" class="logo">Gary Feng</a>
+        <ul class="nav-tabs">
+            <li><a href="/projects">Projects</a></li>
+            <li><a href="/notes/">Notes</a></li>
+        </ul>
+    </nav>
+
     <article>
         <div><h1>Scala</h1><p>These notes are incomplete because it was mostly for a project. This lanaguage is pretty aesticially pleasing.</p><h2>Basics</h2><p><code></code><code>
 import scala.io.StdIn.readLine</code></p><p>println("Hello World")
@@ -26,6 +34,11 @@ trait Speaker:
 	def speak(): String = "Woof!"
 <code></code><code></code></p></div>
     </article>
+
+    <footer>
+        <p>© 2024 Gary Feng. All rights reserved.</p>
+    </footer>
+
 </body>
 
 </html>
