--- a/public/notes/index.html
+++ b/public/notes/index.html
@@ -4,14 +4,28 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title> My notes </title>
+    <title> My Notes </title>
     <link href="/index.css" rel="stylesheet">
 </head>
 
 <body>
+    <nav class="navbar">
+        <a href="/" class="logo">Gary Feng</a>
+        <ul class="nav-tabs">
+            <li><a href="/projects">Projects</a></li>
+            <li><a href="/notes/">Notes</a></li>
+        </ul>
+    </nav>
+
     <article>
-        <div><h1>My notes</h1></div>
+        <div><h1>My Notes</h1><p>These are the notes I have while studying. I use Joplin, but I don't like the markdown for it.
+I use a two part system to take my notes. The first part is just quickly jotting down notes/code snippets, and then I come back to it another day to organize and condense the information.</p><ul><li><a href="/notes/Python">Python</a></li><li><a href="/notes/Golang">Golang</a></li><li><a href="/notes/JavaScript">JS</a></li><li><a href="/notes/C">C</a></li><li><a href="/notes/Scala">Scala</a></li></ul><ul><li><a href="/notes/SQL">SQL</a></li><li><a href="/notes/Kubernetes">K8s</a></li><li><a href="notes/Docker/">Docker</a></li><li><a href="notes/DS">Data Structs</a></li><li><a href="/notes/Git">Git</a></li><li><a href="notes/Algo">Algo</a></li><li><a href="/notes/FP">Functional Programming</a></li></ul></div>
     </article>
+
+    <footer>
+        <p>© 2024 Gary Feng. All rights reserved.</p>
+    </footer>
+
 </body>
 
 </html>
