--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title> About Me </title>
+    <title> Gary Feng </title>
     <link href="/index.css" rel="stylesheet">
 </head>
 
@@ -18,7 +18,7 @@
     </nav>
 
     <article>
-        <div><h1>About Me</h1><p>I have a B.S. in Statistics from University at Buffalo SUNY (not SUNY Buffalo). I was trained as a opthamologist (the study of diseases of the eye) technician, and have been learning backend development. This website is a fork/clone of my static site generator project. Do not expect fancy UX design here. The base coloring of the website is inspired by GMK Olivia. I also know that the markdown parser is "buggy" and will probably fix it for the code block. I really like Discord's codeblock color schemes.</p><p>Email: <a href="mailto:g.feng.work@gmail.com">g.feng.work@gmail.com</a></p><p><a href="https://github.com/Chichigami">Github</a></p><p><a href="https://www.linkedin.com/in/gary-feng-847156241/">LinkedIn</a></p><p><a href="https://www.boot.dev/u/chichigami">Bootdev</a></p><h2>Games that I play</h2><p>Like most people that get into programming; I enjoy playing games. These are some games I've played along with the rankings I've achieved.</p><ul><li>League of Legends (Diamond)</li><li>Valorant (Platinum)</li><li>Teamfight Tactics (Diamond)</li><li>Apex Legends (Diamond)</li><li>Eternal Return (Diamond)</li><li>Path of Exile</li></ul></div>
+        <div><h1>Gary Feng</h1><p>I have a B.S. in Statistics from University at Buffalo SUNY (not SUNY Buffalo). I was trained as a opthamologist (the study of diseases of the eye) technician, and have been learning backend development. This website is a fork/clone of my static site generator project. Do not expect fancy UX design here. The base coloring of the website is inspired by GMK Olivia. I also know that the markdown parser is "buggy" and will probably fix it for the code block. I really like Discord's codeblock color schemes.</p><p>Email: <a href="mailto:g.feng.work@gmail.com">g.feng.work@gmail.com</a></p><p><a href="https://github.com/Chichigami">Github</a></p><p><a href="https://www.linkedin.com/in/gary-feng-847156241/">LinkedIn</a></p><p><a href="https://www.boot.dev/u/chichigami">Bootdev</a></p><h2>Games that I play</h2><p>Like most people that get into programming; I enjoy playing games. These are some games I've played along with the rankings I've achieved.</p><ul><li>League of Legends (Diamond)</li><li>Valorant (Platinum)</li><li>Teamfight Tactics (Diamond)</li><li>Apex Legends (Diamond)</li><li>Eternal Return (Diamond)</li><li>Path of Exile</li></ul></div>
     </article>
 
     <footer>
