--- a/public/hobbies/index.html
+++ b/public/hobbies/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title> {{ Title }} </title>
+    <title> Hobbies </title>
     <link href="/index.css" rel="stylesheet">
 </head>
 
@@ -19,7 +19,7 @@
     </nav>
 
     <article>
-        {{ Content }}
+        <div><h1>Hobbies</h1><h2>Games</h2><p>Like most people that get into programming; I enjoy playing games. These are some games I've played along with the rankings I've achieved.</p><ul><li>League of Legends (Diamond) Top 3%</li><li>Valorant (Platinum)</li><li>Teamfight Tactics (Diamond) Top 4%</li><li>Apex Legends (Diamond)</li><li>Eternal Return (Diamond) Top 3%</li><li>Path of Exile</li></ul><h2>Keyboards</h2><p>Alyssa</p><p>Array65</p><p>Hex6C</p></div>
     </article>
 
     <footer>
