--- a/public/notes/Python/index.html
+++ b/public/notes/Python/index.html
@@ -16,6 +16,7 @@ except Exception as e:
         <ul class="nav-tabs">
             <li><a href="/projects">Projects</a></li>
             <li><a href="/notes/">Notes</a></li>
+            <li><a href="/hobbies">Notes</a></li>
         </ul>
     </nav>
 
