--- a/public/notes/index.html
+++ b/public/notes/index.html
@@ -14,6 +14,7 @@
         <ul class="nav-tabs">
             <li><a href="/projects">Projects</a></li>
             <li><a href="/notes/">Notes</a></li>
+            <li><a href="/hobbies">Notes</a></li>
         </ul>
     </nav>
 
