--- a/public/hobbies/index.html
+++ b/public/hobbies/index.html
@@ -14,16 +14,24 @@
         <ul class="nav-tabs">
             <li><a href="/projects">Projects</a></li>
             <li><a href="/notes/">Notes</a></li>
-            <li><a href="/hobbies">Notes</a></li>
+            <li><a href="/hobbies">Hobbies</a></li>
         </ul>
     </nav>
 
     <article>
-        <div><h1>Hobbies</h1><h2>Games</h2><p>Like most people that get into programming; I enjoy playing games. These are some games I've played along with the rankings I've achieved.</p><ul><li>League of Legends (Diamond) Top 3%</li><li>Valorant (Platinum)</li><li>Teamfight Tactics (Diamond) Top 4%</li><li>Apex Legends (Diamond)</li><li>Eternal Return (Diamond) Top 3%</li><li>Path of Exile</li></ul><h2>Keyboards</h2><p>Alyssa</p><p>Array65</p><p>Hex6C</p></div>
+        <div><h1>Hobbies</h1><h2>Games</h2><p>Like most people that get into programming; I enjoy playing games. These are some games I've played along with the rankings I've achieved.</p><ul><li>League of Legends (Diamond) Top 3%</li><li>Valorant (Platinum)</li><li>Teamfight Tactics (Diamond) Top 4%</li><li>Apex Legends (Diamond)</li><li>Eternal Return (Diamond) Top 3%</li><li>Path of Exile</li></ul><h2>Keyboards</h2><p>I built all my keyboards, currently I use Alyssa.</p><p><img src="/images/alyssa.jpeg" alt="Alyssa"></img>
+Alyssa</p><p><img src="/images/array.jpg" alt="Array65"></img>
+Array65</p><p><img src="/images/hex6c.jpeg" alt="Hex6C"></img>
+Hex 6C</p></div>
     </article>
 
-    <footer>
-        <p>© 2024 Gary Feng. All rights reserved.</p>
+    <footer class="footer">
+        <p>Contact me: <a href="mailto:g.feng.work@gmail.com">g.feng.work@gmail.com</a></p>
+        <p>
+            <a href="https://github.com/Chichigami" target="_blank" rel="noopener noreferrer">GitHub</a> |
+            <a href="https://www.linkedin.com/in/gary-feng-847156241/" target="_blank" rel="noopener noreferrer">LinkedIn</a> |
+            <a href="https://www.boot.dev/u/chichigami" target="_blank" rel="noopener noreferrer">Boot.dev</a>
+        </p>
     </footer>
 
 </body>
