--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title> Gary Feng </title>
+    <title> Gary Feng: From Data to Development </title>
     <link href="/index.css" rel="stylesheet">
 </head>
 
@@ -14,16 +14,21 @@
         <ul class="nav-tabs">
             <li><a href="/projects">Projects</a></li>
             <li><a href="/notes/">Notes</a></li>
-            <li><a href="/hobbies">Notes</a></li>
+            <li><a href="/hobbies">Hobbies</a></li>
         </ul>
     </nav>
 
     <article>
-        <div><h1>Gary Feng</h1><p>I have a B.S. in Statistics from University at Buffalo SUNY (not SUNY Buffalo). I entered the workfield as a opthamologist technician, and have been learning backend development after. This website is a fork/clone of my static site generator project.</p><p>Email: <a href="mailto:g.feng.work@gmail.com">g.feng.work@gmail.com</a></p><p><a href="https://github.com/Chichigami">Github</a></p><p><a href="https://www.linkedin.com/in/gary-feng-847156241/">LinkedIn</a></p><p><a href="https://www.boot.dev/u/chichigami">Bootdev</a></p><p><img src="/images/resume.pdf" alt="Resume"></img></p></div>
+        <div><h1>Gary Feng: From Data to Development</h1><p>I hold a Bachlore of Science in Statistics from University at Buffalo, SUNY. I entered the workfield as a opthamologist technician, and have been learning backend development via Bootdev. I went through a lot of the courses and still going. Currently I am working on an RSS aggregator as well as this website. This website currently does not fully support markdown.</p><h2>Skill/Tech stack</h2><p>Programming Languages: Go, Python, JavaScript, Scala</p><p>Tools: Git, Docker, Kubernetes</p><p>Frameworks: None</p></div>
     </article>
 
-    <footer>
-        <p>© 2024 Gary Feng. All rights reserved.</p>
+    <footer class="footer">
+        <p>Contact me: <a href="mailto:g.feng.work@gmail.com">g.feng.work@gmail.com</a></p>
+        <p>
+            <a href="https://github.com/Chichigami" target="_blank" rel="noopener noreferrer">GitHub</a> |
+            <a href="https://www.linkedin.com/in/gary-feng-847156241/" target="_blank" rel="noopener noreferrer">LinkedIn</a> |
+            <a href="https://www.boot.dev/u/chichigami" target="_blank" rel="noopener noreferrer">Boot.dev</a>
+        </p>
     </footer>
 
 </body>
