--- a/public/notes/index.html
+++ b/public/notes/index.html
@@ -14,7 +14,7 @@
         <ul class="nav-tabs">
             <li><a href="/projects">Projects</a></li>
             <li><a href="/notes/">Notes</a></li>
-            <li><a href="/hobbies">Notes</a></li>
+            <li><a href="/hobbies">Hobbies</a></li>
         </ul>
     </nav>
 
@@ -23,8 +23,13 @@
 I use a two part system to take my notes. The first part is just quickly jotting down notes/code snippets, and then I come back to it another day to organize and condense the information.</p><ul><li><a href="/notes/Python">Python</a></li><li><a href="/notes/Golang">Golang</a></li><li><a href="/notes/JavaScript">JS</a></li><li><a href="/notes/C">C</a></li><li><a href="/notes/Scala">Scala</a></li></ul><ul><li><a href="/notes/SQL">SQL</a></li><li><a href="/notes/Kubernetes">K8s</a></li><li><a href="notes/Docker/">Docker</a></li><li><a href="notes/DS">Data Structs</a></li><li><a href="/notes/Git">Git</a></li><li><a href="notes/Algo">Algo</a></li><li><a href="/notes/FP">Functional Programming</a></li></ul></div>
     </article>
 
-    <footer>
-        <p>© 2024 Gary Feng. All rights reserved.</p>
+    <footer class="footer">
+        <p>Contact me: <a href="mailto:g.feng.work@gmail.com">g.feng.work@gmail.com</a></p>
+        <p>
+            <a href="https://github.com/Chichigami" target="_blank" rel="noopener noreferrer">GitHub</a> |
+            <a href="https://www.linkedin.com/in/gary-feng-847156241/" target="_blank" rel="noopener noreferrer">LinkedIn</a> |
+            <a href="https://www.boot.dev/u/chichigami" target="_blank" rel="noopener noreferrer">Boot.dev</a>
+        </p>
     </footer>
 
 </body>
