--- a/public/notes/Python/index.html
+++ b/public/notes/Python/index.html
@@ -16,7 +16,7 @@ except Exception as e:
         <ul class="nav-tabs">
             <li><a href="/projects">Projects</a></li>
             <li><a href="/notes/">Notes</a></li>
-            <li><a href="/hobbies">Notes</a></li>
+            <li><a href="/hobbies">Hobbies</a></li>
         </ul>
     </nav>
 
@@ -79,8 +79,13 @@ except Exception as e:
 <code></code><code></code></p></div>
     </article>
 
-    <footer>
-        <p>© 2024 Gary Feng. All rights reserved.</p>
+    <footer class="footer">
+        <p>Contact me: <a href="mailto:g.feng.work@gmail.com">g.feng.work@gmail.com</a></p>
+        <p>
+            <a href="https://github.com/Chichigami" target="_blank" rel="noopener noreferrer">GitHub</a> |
+            <a href="https://www.linkedin.com/in/gary-feng-847156241/" target="_blank" rel="noopener noreferrer">LinkedIn</a> |
+            <a href="https://www.boot.dev/u/chichigami" target="_blank" rel="noopener noreferrer">Boot.dev</a>
+        </p>
     </footer>
 
 </body>
