updated tech stack for stats

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
     </nav>
 
     <article>
-        <div><h1>Gary Feng: From Data to Development</h1><p>I hold a Bachlore of Science in Statistics from University at Buffalo, SUNY. I entered the workfield as a opthamologist technician, and have been learning backend development via Bootdev. I went through a lot of the courses and still going. Currently I am working on an RSS aggregator as well as this website. This website currently does not fully support markdown.</p><h2>Skill/Tech stack</h2><p>Programming Languages: Go, Python, JavaScript, Scala</p><p>Tools: Git, Docker, Kubernetes</p><p>Frameworks: None</p></div>
+        <div><h1>Gary Feng: From Data to Development</h1><p>I hold a Bachlore of Science in Statistics from University at Buffalo, SUNY. I entered the workfield as a opthamologist technician, and have been learning backend development via Bootdev. I went through a lot of the courses and still going. Currently I am working on an RSS aggregator as well as this website. This website currently does not fully support markdown.</p><h2>Skill/Tech stack</h2><p>Programming Languages: Go, Python, JavaScript, Scala</p><p>Tools: Git, Docker, Kubernetes</p><p>Frameworks: None</p><p>Statistical Tools: R, Minitab, Excel</p></div>
     </article>
 
     <footer class="footer">
