--- a/public/notes/Git/index.html
+++ b/public/notes/Git/index.html
@@ -19,7 +19,7 @@
     </nav>
 
     <article>
-        <div><h1>Git</h1><p>Pretty unorganized because it's mostly just terminal commands.</p><p><code></code><code>zsh
+        <div><h1>Git</h1><p>Pretty unorganized because it's mostly just terminal commands.</p><p><code></code><code>
 git status</code></p><p>git add filepath</p><p>git commit -m "message"</p><p>git commit --amend -m "change last commit message"</p><p>#see history
 git log</p><p>git cat-file -p hash
 //will return the blob of the commit</p><p>git config --add --global key value
@@ -43,8 +43,7 @@ directory
 /main.py will ignore main.py in the directory with .gitignore</i></p><p><i>.txt
 !important.txt
 //will ignore all .txt file except important</i></p><p>use # to comment inside the .gitignore file
-<code></code><code></code></p><h1>Git 2</h1><h1>Fork</h1><p>Not a git operation. To fork a repo, go to git hosting website and there's a fork. It's just a copy of the repo in github account.</p><p>Procedure to contribute:</p><ol><li>fork repo</li><li>clone repo</li><li>make new branch with a name ie: your_feature</li><li>make changes</li><li>commit and push to your repo</li><li>create pull request on original repo</li></ol><pre><code>sh
-git clone https://github.com/chichigami/megacorp
+<code></code><code></code></p><h1>Git 2</h1><h1>Fork</h1><p>Not a git operation. To fork a repo, go to git hosting website and there's a fork. It's just a copy of the repo in github account.</p><p>Procedure to contribute:</p><ol><li>fork repo</li><li>clone repo</li><li>make new branch with a name ie: your_feature</li><li>make changes</li><li>commit and push to your repo</li><li>create pull request on original repo</li></ol><pre><code>git clone https://github.com/chichigami/megacorp
 cd megacorp
 git branch
 git switch or git checkout
@@ -59,26 +58,22 @@ git merge main
 git add
 git commit
 	git log should now show the 2 commit hashes come together
-</code></pre><h1>Stash</h1><pre><code>sh
-git stash
+</code></pre><h1>Stash</h1><pre><code>git stash
 git stash pop
 git stash list
 git stash apply
 git cherry-pick <commit-hash>
-</code></pre><h1>Bisect</h1><p>Bisec helps you find which commit caused a bug</p><pre><code>sh
-git bisect start
+</code></pre><h1>Bisect</h1><p>Bisec helps you find which commit caused a bug</p><pre><code>git bisect start
 git bisect good <commit-hash>
 git bisect bad <commit-hash>
-</code></pre><h1>Worktree</h1><pre><code>sh
-git worktree add <path> <branch>
+</code></pre><h1>Worktree</h1><pre><code>git worktree add <path> <branch>
 	optional: <branch> defaults to <path>'s name
 git worktree list
 cat <path>/.git will link to the main worktree
 git worktree remove <worktree_name>
 git worktree prune
 </code></pre><p>Can't switch branch that is being worked on in another tree</p><h1>Tags</h1><p>Useful for versions of the application
-ie: v1.0, 2.0 etc</p><pre><code>sh
-git tag
+ie: v1.0, 2.0 etc</p><pre><code>git tag
 	list all tags
 git tag -a "tag_name" -m "tag_description"
 	will make it at current commit
