--- a/public/notes/Python/index.html
+++ b/public/notes/Python/index.html
@@ -21,17 +21,16 @@ except Exception as e:
     </nav>
 
     <article>
-        <div><h1>Python Basics</h1><h2>Printing</h2><p><code></code><code>py
+        <div><h1>Python Basics</h1><h2>Printing</h2><p><code></code><code>
 print("Hello World")
 # Hello World</code></p><p>count = 3
 print(f"Count is {count}")
 # Hello World
 # Count is 3
-<code></code><code></code></p><p>Use <code>" "</code></p><h2>Comparisons</h2><pre><code>ython
-==
+<code></code><code></code></p><p>Use <code>" "</code></p><h2>Comparisons</h2><pre><code>==
 and
 or
-</code></pre><h2>Types</h2><p><code></code><code>py
+</code></pre><h2>Types</h2><p><code></code><code>
 int/float/complex
 string
 list, tuple, range
@@ -41,19 +40,19 @@ bool
 bytes, bytearry, memoryview
 NoneType</code></p><p># to check the type
 type(variable)
-<code></code><code></code></p><h2>Lists</h2><p><code></code><code>python
+<code></code><code></code></p><h2>Lists</h2><p><code></code><code>
 list = [0,1,2,3,4,5,6,7,8,9]</code></p><p># slicing a list [start: stop :step]
 even_list = list[::2]
 odd_list = list[1::2]</p><p># print(even_list, odd_list)
 # [0,2,4,6,9] [1,3,5,7,9]
 <code></code><code></code></p><p>Putting <code>:</code> in <code>[]</code> is called slicing</p><h2>Tuples</h2><p>Collection of data that is ordered and unchangable.  
-Sort of like a list w/ fixed size</p><p><code></code><code>py
+Sort of like a list w/ fixed size</p><p><code></code><code>
 tuple = ("yep", 69, True)
 single_element_tuple = ("nope",)
 multiple_tuples = [("1,2,3"),("4,5,6"),("7,8,9")]</code></p><p># print(multiple_tuples[2,1])
 # 4
 <code></code><code></code></p><h2>Dictionaries</h2><p>Basically maps in other languages  
-key -> value pair</p><p><code></code><code>py
+key -> value pair</p><p><code></code><code>
 person = {
     "age": 10
     "race": white
@@ -64,14 +63,14 @@ print(person["age"])
 print (person)
 # {age: 10, blood: O}</p><p># adding a new key value pair
 person['height'] = 169
-<code></code><code></code></p><p>If there are duplicate keys, the old one will be overwritten</p><h2>Set</h2><p>unordered list but each element is unique</p><p><code></code><code>py
+<code></code><code></code></p><p>If there are duplicate keys, the old one will be overwritten</p><h2>Set</h2><p>unordered list but each element is unique</p><p><code></code><code>
 names = {'Bob', 'John', 'Sam'}</code></p><p># adding element
 names.add('Annie')</p><p># removing element
 names.remove('Bob')</p><p># making an empty set
 names = set()</p><p># turning a set into a list
 list(names)</p><p># returning a list into a set
 set(names)
-<code></code><code></code></p><h2>Errors</h2><p><code></code><code>py
+<code></code><code></code></p><h2>Errors</h2><p><code></code><code>
 try:
     10/0</code></p><p># received from the raise exception
 except Exception as e:
