--- a/public/notes/SQL/index.html
+++ b/public/notes/SQL/index.html
@@ -28,7 +28,7 @@
 Contraints can be <code>NOT NULL | UNIQUE | PRIMARY KEY</code>
 <code>NOT NULL</code> Won't accept values that is NULL
 <code>UNIQUE</code> Will not allow dupeplicate data in the column. Can be NULL
-<code>PRIMARY KEY</code> Will automatically generate somethign if left empty. Can not be NULL</p><h2>Reference/Foreign key</h2><p>Foreign key will reference to another table's primary key. This makes table relational</p><p><code></code><code>sqlite
+<code>PRIMARY KEY</code> Will automatically generate somethign if left empty. Can not be NULL</p><h2>Reference/Foreign key</h2><p>Foreign key will reference to another table's primary key. This makes table relational</p><p><code></code><code>
 CREATE TABLE departments (
     id INTEGER PRIMARY KEY,
     department_name TEXT NOT NULL
@@ -40,26 +40,22 @@ CREATE TABLE departments (
     FOREIGN KEY (department_id)
     REFERENCES departments(id)
 );
-<code></code><code></code></p><h2>Insert Data</h2><pre><code>qlite
-INSERT INTO table (param1, param2, ...)
+<code></code><code></code></p><h2>Insert Data</h2><pre><code>INSERT INTO table (param1, param2, ...)
 VALUES (arg1, arg2, ...);
-</code></pre><ul><li>However, most of the time we will use a library in another programing language.</li></ul><h2>Alter/Change data</h2><pre><code>qlite
-ALTER TABLE table_name
+</code></pre><ul><li>However, most of the time we will use a library in another programing language.</li></ul><h2>Alter/Change data</h2><pre><code>ALTER TABLE table_name
 	RENAME TO table_name;
 	RENAME COLUMN column_name TO new_column_name;
 	ADD COLUMN column_name TYPE;
 	DROP COLUMN column_name TYPE;
 </code></pre><h2>Delete Data</h2><pre><code>DELETE FROM table WHERE variable = x
-</code></pre><h1>Aggregation</h1><p>Single value combing serval other values</p><pre><code>qlite
-count
+</code></pre><h1>Aggregation</h1><p>Single value combing serval other values</p><pre><code>count
 	DISTINCT (UNIQUE col)
 sum (col)
 min/max (col)
 avg (col)
 round (value, presicion)
 </code></pre><p><code>DISTINCT</code> Will remove duplicates
-<code>round(value, precision)</code> if precision is left blank, it will round to whole number</p><ul><li><code>round(value, 1)</code> will return value.1st decimal</li></ul><h2>Query</h2><pre><code>qlite
-SELECT what_you_want
+<code>round(value, precision)</code> if precision is left blank, it will round to whole number</p><ul><li><code>round(value, 1)</code> will return value.1st decimal</li></ul><h2>Query</h2><pre><code>SELECT what_you_want
 FROM table_name
 WHERE variable_name CONDITIONS
 	LIKE 'name%' '%name'  '%name%'  '_ame'
@@ -80,22 +76,19 @@ Can use with % or \_ wildcard operator:</p><p>-     <code>'name%''</code>: will 
 - Will exactly match with the names provided
 - Can also be used to do a subquery</p><p><code>ORDER BY</code>: ASC: ascending will be default. DESC: descending
 Has to come before LIMIT
-<code>Having</code> : if we need to filter more after GROUP BY. Thus use after GROUP BY. Kinda like WHERE but not on raw data</p><h2>Subquery/Nested query</h2><pre><code>qlite
-SELECT variable1
+<code>Having</code> : if we need to filter more after GROUP BY. Thus use after GROUP BY. Kinda like WHERE but not on raw data</p><h2>Subquery/Nested query</h2><pre><code>SELECT variable1
 FROM table1
 WHERE variable1 IN (
 	SELECT variable2
 	FROM table2
 	WHERE table2_variable CONDITION
 );
-</code></pre><h2>IIF/Ternary/IF ELSE</h2><pre><code>qlite
-SELECT <i>,
+</code></pre><h2>IIF/Ternary/IF ELSE</h2><pre><code>SELECT <i>,
 IIF (CONDITION, TRUE, FALSE) AS appended_new_column_name
 FROM table;
 </i></code></pre><h1>Different type of table schemas</h1><p>One to One
 One to Many
-Many to Many tables</p><ul><li>Many different people can have multiple banks but they should have different bank info</li></ul><pre><code>qlite
-CREATE TABLE users (
+Many to Many tables</p><ul><li>Many different people can have multiple banks but they should have different bank info</li></ul><pre><code>CREATE TABLE users (
   id INTEGER PRIMARY KEY,
   name TEXT NOT NULL,
   age INTEGER NOT NULL,
@@ -115,8 +108,7 @@ CREATE TABLE users_banks (
 );
 </code></pre><p><code>UNIQUE (user_id, bank_id)</code> is a primary key made of 2 columns</p><h1>Normalized Databases</h1><p>From least to most normalized</p><ul><li>    1NF: 1st normal form</li><li>  -     Each row must be unique (no dupe data/primary key)</li><li>  -     Cell cannot be nested</li><li>    2NF: 2nd normal form</li><li>  -     All columns that are not part of the primary key are dependent on the entire primary key, and not just one of the columns in the primary key</li><li>    3NF: 3rd normal form</li><li>  -     All columns that aren't part of the primary are dependent solely on the primary key</li><li>    BCNF: Boyce-Codd normal form</li><li>  -     A column that's part of a primary key can not be entirely dependent on a column that's not part of that primary key</li></ul><p>ALWAYS CREATE 1NF DB's.
 De-normalize DB if speed issue.</p><h1>Joins</h1><p>This is like what set intersects what
-<code>INNER JOIN | LEFT JOIN | RIGHT JOIN | FULL JOIN </code></p><ul><li>SQLite doesn't support RIGHT and FULL JOINS but basically the same as LEFT JOIN but swap the variables around</li></ul><pre><code>qlite
-SELECT columns_you_want
+<code>INNER JOIN | LEFT JOIN | RIGHT JOIN | FULL JOIN </code></p><ul><li>SQLite doesn't support RIGHT and FULL JOINS but basically the same as LEFT JOIN but swap the variables around</li></ul><pre><code>SELECT columns_you_want
 FROM table1
 JOIN table2 ON table1.column = table2.column
 </code></pre><h1>Performance/Indexing</h1><p><code>CREATE INDEX column_name_idx on table_name (column_name);</code>
