--- a/public/notes/index.html
+++ b/public/notes/index.html
@@ -20,7 +20,7 @@
 
     <article>
         <div><h1>My Notes</h1><p>These are the notes I have while studying. I use Joplin, but I don't like the markdown for it.
-I use a two part system to take my notes. The first part is just quickly jotting down notes/code snippets, and then I come back to it another day to organize and condense the information.</p><ul><li><a href="/notes/Python">Python</a></li><li><a href="/notes/Golang">Golang</a></li><li><a href="/notes/JavaScript">JS</a></li><li><a href="/notes/C">C</a></li><li><a href="/notes/Scala">Scala</a></li></ul><ul><li><a href="/notes/SQL">SQL</a></li><li><a href="/notes/Kubernetes">K8s</a></li><li><a href="notes/Docker/">Docker</a></li><li><a href="notes/DS">Data Structs</a></li><li><a href="/notes/Git">Git</a></li><li><a href="notes/Algo">Algo</a></li><li><a href="/notes/FP">Functional Programming</a></li></ul></div>
+I use a two part system to take my notes. The first part is just quickly jotting down notes/code snippets, and then I come back to it another day to organize and condense the information.</p><h2>Languages</h2><ul><li><a href="/notes/Python">Python</a></li><li><a href="/notes/Golang">Golang</a></li><li><a href="/notes/JavaScript">JS</a></li><li><a href="/notes/C">C</a></li><li><a href="/notes/Scala">Scala</a></li></ul><h2>Technology</h2><ul><li><a href="/notes/SQL">SQL</a></li><li><a href="/notes/Kubernetes">K8s</a></li><li><a href="notes/Docker/">Docker</a></li><li><a href="notes/HTTP%20server">HTTP servers</a></li></ul><h2>Fundamentals</h2><ul><li><a href="notes/DS">Data Structs</a></li><li><a href="/notes/Git">Git</a></li><li><a href="notes/Algo">Algo</a></li><li><a href="/notes/FP">Functional Programming</a></li></ul></div>
     </article>
 
     <footer class="footer">
